--- a/css/global.css
+++ b/css/global.css
@@ -154,6 +154,18 @@ td input {
     margin-right: 4px;
 }
 
+td input[type="number"] {
+    width: 60px;
+    padding: 4px;
+    font-size: 14px;
+}
+
+td input[type="checkbox"] {
+    transform: scale(1.3);
+    cursor: pointer;
+}
+
+
 .btn-save {
     background: #22c55e;
     color: white;
