--- a/css/global.css
+++ b/css/global.css
@@ -205,3 +205,12 @@ td input[type="checkbox"] {
 .btn-delete {
     width: auto !important;
 }
+
+.side-menu.open {
+    left: 0 !important;
+}
+
+.side-menu.open + .main-container {
+    margin-left: 250px !important;
+}
+
