--- a/css/global.css
+++ b/css/global.css
@@ -262,3 +262,8 @@ td button {
     font-size: 11px;
     padding: 3px 5px;
 }
+
+.side-menu.open ~ .main-container,
+.side-menu.open + .main-container {
+    margin-left: 250px !important;
+}
