--- a/css/global.css
+++ b/css/global.css
@@ -269,7 +269,10 @@ td button {
 }
 
 .linha-meses div input {
-    width: 60px;
+    width: 55px;
+    padding: 3px;
+    font-size: 10.5px;
     text-align: center;
 }
+
 
